--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -152,6 +152,13 @@ body {
     width: 50px;
     height: 50px;
 }
+
+#baohanh {
+    width: 100%; height: 60%;
+    border-radius: 4px;
+    outline: none;
+    padding: 0 .5rem;
+}
 /*====================================
         End Control Data
 ====================================*/
@@ -243,6 +250,8 @@ body {
     grid-template-columns: repeat(2,1fr);
     grid-gap: 10px;
     grid-auto-rows: 125px;
+    height: 140px;
+    overflow-y: scroll;
 }
 
 .listHinhAnh li {
@@ -252,19 +261,6 @@ body {
 .listHinhAnh li img {
     width: 100%;
     height: 100%;
-}
-
-.listHinhAnh span {
-    position: absolute;
-    bottom: -5px; right: 2px;
-    display: block;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background: #dfe6e9;
-    text-align: center;
-    padding-top: 2px;
-    cursor: pointer;
 }
 
 /*====================================
