--- a/views/CRUD_dashboard.ejs
+++ b/views/CRUD_dashboard.ejs
@@ -129,33 +129,26 @@
             <ul class="listInput">
                 <li style="grid-row: 1">
                     <label>TenSP:</label>
-                    <input type="text" name="tensp" placeholder="vd: SamSung Note 10+">
+                    <input type="text" name="tensp" placeholder="vd: SamSung Note 10+" required>
                 </li>
                 <li style="grid-row: 1">
                     <label>Gia:</label>
-                    <input type="text" name="gia" placeholder="vd: 20000000">
+                    <input type="text" name="gia" placeholder="vd: 20000000" required>
                 </li>
                 <li style="grid-row: 1">
                     <label>Gia giam:</label>
-                    <input type="text" name="giagiam" placeholder="vd: -2000000">
+                    <input type="text" name="giagiam" placeholder="vd: -2000000" required>
                 </li>
                 <li style="border: 1.5px solid #ebebeb; padding: .5rem; border-radius: 5px;grid-row: 1/3">
                     <label>Hinh anh san pham:</label>
-                    <input type="file" name="hinhsp" placeholder="Chon hinh" multiple>
+                    <input type="file" name="hinhsp" placeholder="Chon hinh" multiple required>
                     <ul class="listHinhAnh">
-                        <li>
-                            <img class="btnimg" data-index="10" src="/images/oppo-a52-black-400-400x460.png" alt="product">
-                            <span><i class="fas fa-times"></i></span>
-                        </li>
-                        <li>
-                            <img src="/images/oppo-a52-black-400-400x460.png" alt="product">
-                            <span><i class="fas fa-times"></i></span>
-                        </li>
+                        <!-- render from dashboard.js-->
                     </ul>
                 </li>
                 <li style="border: 1.5px solid #ebebeb; padding: .5rem; border-radius: 5px;grid-row: 2/4">
                     <label>Khuyen mai:</label>
-                    <input type="text" name="khuyenmai" placeholder="vd: Giam 1 trieu...">
+                    <input type="text" name="khuyenmai" placeholder="vd: Giam 1 trieu..." id="khuyenmai" required>
                     <button class="addDiscount add">Them</button>
                     <ul class="styleOfList" id="listKhuyenMai">
                         <!-- <li>Giam 1 trieu<i class="far fa-times-circle"></i></li>
@@ -167,32 +160,19 @@
                 </li>
                 <li style="border: 1.5px solid #ebebeb; padding: .5rem; border-radius: 5px;grid-row: 2/4">
                     <label>Ten qua khuyen mai:</label>
-                    <input type="text" name="tenquakm" placeholder="vd: Tai nghe Sony...">
-                    <label style="margin-top: .5rem;">Hinh khuyen mai:</label>
                     <div class="groupInputFile_btnAdd">
-                        <input type="file" name="hinhkhuyemai" placeholder="Hinh khuyen mai">
-                        <i class="far fa-plus-square"></i>
+                        <input type="text" name="tenquakm" placeholder="vd: Tai nghe Sony..." required>
+                        <i class="far fa-plus-square addnameDiscount"></i>
                     </div>
                     <ul class="listDiscountGift">
-                        <li>
-                            <img src="images/samsung-galaxy-s10-lite.jpg" alt="imgDiscount">
-                            <span>khuyen mai</span>
-                        </li>
-                        <li>
-                            <img src="images/samsung-galaxy-s10-lite.jpg" alt="imgDiscount">
-                            <span>khuyen mai</span>
-                        </li>
-                        <li>
-                            <img src="images/samsung-galaxy-s10-lite.jpg" alt="imgDiscount">
-                            <span>khuyen mai</span>
-                        </li>
+                        <!-- render from dashboard.js-->
                     </ul>
                 </li>
                 <li style="border: 1.5px solid #ebebeb; padding: .5rem; border-radius: 5px; grid-row: 2/4">
                     <label>Phu kien:</label>
-                    <input type="text" name="phukien" placeholder="vd: Sac...">
+                    <input type="text" name="phukien" placeholder="vd: Sac..." required>
                     <button class="addAccessories add">Them</button>
-                    <ul class="accessories styleOfList">
+                    <ul class="accessories styleOfList" id="listphukien">
                         <!-- <li>Sac</li>
                         <li>Tai nghe</li>
                         <li>Sach huong dan su dung</li>
@@ -201,16 +181,25 @@
                 </li>
                 <li style="border: 1.5px solid #ebebeb; padding: .5rem; border-radius: 5px;">
                     <label>Mo ta:</label>
-                    <input type="file" name="mota" placeholder="Chon file text mo ta" style="margin-bottom: .5rem;">
+                    <input type="file" name="mota" placeholder="Chon file text mo ta" style="margin-bottom: .5rem;" required>
                     <span>file.html</span>
                 </li>
                 <li>
+                    <label>Bao hanh:</label>
+                    <select id="baohanh" name="baohanh">
+                        <option value="6">6 thang</option>
+                        <option value="12">12 thang</option>
+                        <option value="24">24 thang</option>
+                        <option value="36">36 thang</option>
+                    </select>
+                </li>
+                <li>
                     <label>Thuong hieu:</label>
-                    <input type="text" name="thuonghieu" placeholder="vd: XiaoMi">
+                    <input type="text" name="thuonghieu" placeholder="vd: XiaoMi" required>
                 </li>
                 <li>
                     <label>Danh muc:</label>
-                    <input type="text" name="danhmuc" placeholder="vd: Dienthoai">
+                    <input type="text" name="danhmuc" placeholder="vd: Dienthoai" required>
                 </li>
                 <li class="btns_controlForm">
                     <button class="submit">Cap nhap</button>
